✨ POST /sensors/{id}/temperatures Done
