# MyClimate/routes/api/temperature.php
@@ -1,6 +1,6 @@
 <?php
 
-use Illuminate\Http\Request;
+use App\Http\Controllers\TemperatureController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -13,3 +13,11 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
+Route::middleware(['auth:sanctum'])->group(function () {
+
+    // Create a temperature
+    Route::post('sensors/{id}/temperatures', [TemperatureController::class, 'store'])
+        ->name('api.temperatures.store');
+
+
+});
